[package]
name = "bluey"
version = "0.1.0"
edition = "2021"
author = ["m1dkid <kenziedolan503@gmail.com"]
description = "A simple ble tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.0", features = ["full"] }
clap = { version = "4.4.2", features = ["derive"] }
env = "0.0.0"
tokio = "1.32.0"
